--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,10 @@ virtualenv~=20.13.0
 distlib~=0.3.4
 filelock~=3.4.2
 platformdirs~=2.4.1
+pytz~=2021.3
+scipy~=1.7.3
+joblib~=1.1.0
+pandas~=1.4.0
+sklearn~=0.0
+scikit-learn~=1.0.2
+threadpoolctl~=3.1.0
